# frame

./: .gitignore  CHANGELOG.md  CLI工具使用说明.md  CMakeLists.txt  EagleFramework.pro  Git使用指南.md  LICENSE  README.md  REST_API使用说明.md  REST_API实现总结.md  下一步开发建议.md  开发优先级建议.md  待做清单.md  插件使用说明.md  服务降级方案使用说明.md  未完成功能分析报告.md  未实现功能清单.md  第一阶段实现总结.md  第二阶段实现总结.md  编译问题解决说明.md  重试策略使用说明.md  需求文档.md  项目结构说明.md
core/: core.pro
examples/: CMakeLists.txt  examples.pro
examples/main_app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  main_app.pro
examples/sample_plugin/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.h  sample_plugin.pro
include/eagle/core/: AlertSystem.h  ApiKeyManager.h  ApiRoutes.h  ApiServer.h  AsyncServiceCall.h  AuditLog.h  BackupManager.h  CircuitBreaker.h  ConfigEncryption.h  ConfigFormat.h  ConfigManager.h  ConfigSchema.h  ConfigVersion.h  DegradationPolicy.h  DiagnosticManager.h  EmailChannel.h  EventBus.h  FailoverManager.h  Framework.h  HotReloadManager.h  IPlugin.h  LoadBalancer.h  Logger.h  NotificationChannel.h  PerformanceMonitor.h  PermissionChangeNotification.h  PluginIsolation.h  PluginManager.h  PluginSignature.h  RBAC.h  RateLimiter.h  ResourceMonitor.h  RetryPolicy.h  ServiceDescriptor.h  ServiceRegistry.h  SessionManager.h  SslConfig.h  SystemHealth.h  TestCaseBase.h  TestRunner.h  (+1 more)
src/core/: AlertSystem.cpp  AlertSystem_p.h  ApiKeyManager.cpp  ApiRoutes.cpp  ApiServer.cpp  ApiServer_p.h  AuditLog.cpp  AuditLog_p.h  BackupManager.cpp  BackupManager_p.h  CMakeLists.txt  ConfigEncryption.cpp  ConfigManager.cpp  ConfigManager_p.h  DegradationPolicy.cpp  DegradationPolicy_p.h  EmailChannel.cpp  EventBus.cpp  EventBus_p.h  Framework.cpp  Framework_p.h  Logger.cpp  NotificationChannel.cpp  PluginManager.cpp  PluginManager_p.h  PluginSignature.cpp  RBAC.cpp  RBAC_p.h  RateLimiter.cpp  RateLimiter_p.h  RetryPolicy.cpp  ServiceRegistry.cpp  ServiceRegistry_p.h  SessionManager.cpp  SessionManager_p.h  WebhookChannel.cpp
src/core/api/: ApiRoutes.cpp  ApiServer.cpp  ApiServer_p.h  SslConfig.cpp  SslConfig_p.h
src/core/config/: ConfigEncryption.cpp  ConfigFormat.cpp  ConfigManager.cpp  ConfigManager_p.h  ConfigSchema.cpp  ConfigVersion.cpp  ConfigVersion_p.h
src/core/event/: EventBus_p.h
src/core/framework/: Framework.cpp  Framework_p.h
src/core/hotreload/: HotReloadManager.cpp  HotReloadManager_p.h
src/core/monitoring/: AlertSystem_p.h  DiagnosticManager.cpp  DiagnosticManager_p.h  PerformanceMonitor.cpp  PerformanceMonitor_p.h  SystemHealth.cpp
src/core/plugin/: PluginIsolation.cpp  PluginManager.cpp  PluginManager_p.h  PluginSignature.cpp  ResourceMonitor.cpp  ResourceMonitor_p.h
src/core/security/: ApiKeyManager_p.h  AuditLog.cpp  AuditLog_p.h  PermissionChangeNotification.cpp  RBAC.cpp  RBAC_p.h  RateLimiter.cpp
src/core/service/: AsyncServiceCall.cpp  CircuitBreaker.cpp  FailoverManager.cpp  FailoverManager_p.h  LoadBalancer.cpp  LoadBalancer_p.h  RetryPolicy_p.h  ServiceRegistry.cpp  ServiceRegistry_p.h
src/core/test/: TestCaseBase.cpp  TestRunner.cpp  TestRunner_p.h
src/tools/: CMakeLists.txt
templates/: test_config_test.cpp.template  test_plugin_test.cpp.template
tools/: CMakeLists.txt
tools/eagle-cli/: CMakeLists.txt  eagle-cli.pro  main.cpp
